Logpar now identifies custom fields by having the schemf module as dependency - Added mock to schemf - Updated commands to inject schema when building logpar

--- a/src/engine/source/logpar/CMakeLists.txt
+++ b/src/engine/source/logpar/CMakeLists.txt
@@ -5,4 +5,4 @@ PUBLIC
 PRIVATE
   include/logpar
 )
-target_link_libraries(logpar PUBLIC hlp fmt json)
+target_link_libraries(logpar PUBLIC hlp fmt json schemf::ischema)
