--- a/src/engine/source/schemf/CMakeLists.txt
+++ b/src/engine/source/schemf/CMakeLists.txt
@@ -1,23 +1,36 @@
+# Defs
+set(SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/src)
+set(INC_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
+set(IFACE_DIR ${CMAKE_CURRENT_LIST_DIR}/interface)
+
 add_library(schemf_ischema INTERFACE)
-target_include_directories(schemf_ischema INTERFACE ${CMAKE_CURRENT_LIST_DIR}/interface)
+target_include_directories(schemf_ischema INTERFACE ${IFACE_DIR})
 target_link_libraries(schemf_ischema INTERFACE json base)
 add_library(schemf::ischema ALIAS schemf_ischema)
 
 add_library(schemf STATIC
-  ${CMAKE_CURRENT_LIST_DIR}/src/schema.cpp
-  ${CMAKE_CURRENT_LIST_DIR}/src/field.cpp
+  ${SRC_DIR}/schema.cpp
+  ${SRC_DIR}/field.cpp
 )
 
 target_include_directories(schemf
 PUBLIC
-  ${CMAKE_CURRENT_LIST_DIR}/include
+  ${INC_DIR}
 PRIVATE
-  ${CMAKE_CURRENT_LIST_DIR}/src
-  ${CMAKE_CURRENT_LIST_DIR}/include/schemf
+  ${SRC_DIR}
+  ${INC_DIR}/schemf
 )
 target_link_libraries(schemf schemf::ischema)
 
+# Tests
+if(ENGINE_BUILD_TEST)
+
+set(TEST_SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/test/src)
+set(TEST_MOCK_DIR ${CMAKE_CURRENT_LIST_DIR}/test/mocks)
+
 add_library(schemf_mocks INTERFACE)
-target_include_directories(schemf_mocks INTERFACE ${CMAKE_CURRENT_LIST_DIR}/mocks)
-target_link_libraries(schemf_mocks INTERFACE schemf::ischema)
+target_include_directories(schemf_mocks INTERFACE ${TEST_MOCK_DIR})
+target_link_libraries(schemf_mocks INTERFACE gmock schemf::ischema)
 add_library(schemf::mocks ALIAS schemf_mocks)
+
+endif(ENGINE_BUILD_TEST)
