--- a/src/engine/test/source/logpar/CMakeLists.txt
+++ b/src/engine/test/source/logpar/CMakeLists.txt
@@ -7,5 +7,5 @@ gtest_discover_tests(parsec_test)
 add_executable(logpar_test
     logpar_test.cpp
 )
-target_link_libraries(logpar_test logpar gtest_main)
+target_link_libraries(logpar_test logpar gtest_main schemf::mocks)
 gtest_discover_tests(logpar_test)
