--- a/.github/workflows/api-unit-tests.yml
+++ b/.github/workflows/api-unit-tests.yml
@@ -12,6 +12,8 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.9']
+    env:
+      PYTHONPATH: /home/runner/work/wazuh/wazuh/api:/home/runner/work/wazuh/wazuh/framework
     steps:
       - uses: actions/checkout@v3
 
@@ -28,4 +30,4 @@ jobs:
           pip install -r framework/requirements-dev.txt
 
       - name: Run API tests
-        run: python3 -m pytest api/api
+        run: python -m pytest api/api
