--- a/src/unit_tests/wazuh_modules/ms_graph/CMakeLists.txt
+++ b/src/unit_tests/wazuh_modules/ms_graph/CMakeLists.txt
@@ -8,7 +8,7 @@
 # Tests list and flags
 list(APPEND tests_names "test_wm_ms_graph")
 list(APPEND tests_flags "-Wl,--wrap=_merror -Wl,--wrap=_mtinfo -Wl,--wrap=_mtwarn -Wl,--wrap,_mtdebug1 -Wl,--wrap=_mterror -Wl,--wrap,wurl_http_request \
-                        -Wl,--wrap,cJSON_Parse -Wl,--wrap,time")
+                        -Wl,--wrap,cJSON_Parse -Wl,--wrap,wm_state_io -Wl,--wrap,StartMQ -Wl,--wrap,time")
 list(APPEND use_shared_libs 1)
 
 list(APPEND shared_libs "../scheduling/wmodules_scheduling_helpers.h")
