--- a/src/shared_modules/router/testtool/CMakeLists.txt
+++ b/src/shared_modules/router/testtool/CMakeLists.txt
@@ -8,4 +8,4 @@ file(GLOB ROUTER_TEST_TOOL_SRC "*.cpp")
 
 add_executable(router_test_tool ${ROUTER_TEST_TOOL_SRC})
 
-target_link_libraries(router_test_tool router)
+target_link_libraries(router_test_tool router pthread)
